--- a/example.html
+++ b/example.html
@@ -45,11 +45,11 @@
                <figcaption>London Clock Tower, London</figcaption>
              </figure>
             </center>
-<!-- <span>
+<span>
     <video width="500" height="300" control autoplay muted>
   <source src="" type="video/mp4"/>
     </video>
-</span>       -->
+</span>      
         
   <!-- Image Map -->
    <img src="workspace.jpg" alt="WorkPlace" width="800px" height="500px" usemap="#workmap"  />
