--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
    <dd>Hyper Text Transfer Protocol</dd>
   </dl>
  <!-- Table tag -->
-<table>
+<table border: 2>
    <tr>
-      <th>Firstname</th>
+      <th >Firstname</th>
       <th>Lastname</th>
       <th>Age</th>
    </tr>
