--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
     USA
 </address>
 
-<p style="background-color: red; ">This is paragraph1</p>
+<p style="background-color: red; ">This is paragraph1 paragraph</p>
 <p style="background-color: skyblue">This is paragraph2</p>
 
 <span style="background-color: salmon;">This is span1</span>
@@ -46,8 +46,8 @@
              </figure>
             </center>
 <span>
-    <video width="500" height="300" control autoplay muted>
-  <source src="" type="video/mp4"/>
+    <video width="500" height="300" controls>
+  <source src="video.mp4" type="video/mp4"/>
     </video>
 </span>      
         
