--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
          th {
             text-align:center;
          }
+         button {
+            margin: 50px;
+            padding: 20px;
+            border: 3px solid red;
+         }
     </style> 
  </head>
  <body>
@@ -61,8 +66,7 @@
    >Go to Link Page!!!</a>
    <br><br />
    <br><br />
- <!-- Button -->
- <button>Click Here!!!</button>
+
  <!-- Lists -->
   <!-- unordered list - plain bullets -->
   <ul>
@@ -110,6 +114,8 @@
    </tr>
 
 </table> -->
+ <!-- Button -->
+ <button>Click Here!!!</button>
 
 <table style="width:100%">
  <tr>
