--- a/boxmodel.html
+++ b/boxmodel.html
@@ -16,7 +16,7 @@
            
         }
         img {
-            border-radius:  150px;
+            /* border-radius:  150px; */
             display: block;
             margin-left: auto;
             margin-right: auto;
