--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
          border: 2px solid purple;
          border-collapse: collapse;
          border-spacing: 60px;
+         margin-left: auto;
+         margin-right: auto;
          
          }
          th, td {
@@ -33,7 +35,7 @@
             padding-bottom: 20px;
             padding-left: 30px;
             padding-right: 60px; */
-            padding: 5px;
+            padding: 50px;
          }
          th {
             text-align:center;
@@ -117,7 +119,7 @@
  <!-- Button -->
  <button>Click Here!!!</button>
 
-<table style="width:100%">
+<table style="width:50%">
  <tr>
    <th>Name</th>
    <td>Jill</td>
