added position and z-index

--- a/form.html
+++ b/form.html
@@ -35,6 +35,10 @@
             <option value="6-7">6 AM to 7 PM</option>
             <option value="9-5">9 AM to 5 PM</option>
             <option value="10-11">10 AM to 11 PM</option>
+            <optgroup label="Choose timing">
+              <option value="10">10 AM</option>  
+              <option value="9">9 PM</option>  
+            </optgroup>
         </select>
         <br><br>
         <button type="submit">Submit</button>
