added html and css

--- a/home.html
+++ b/home.html
@@ -37,13 +37,59 @@
         </div>
        <div id="text-style">
         <p>Find the best restaurants, cafés, and bars</p>
-    </div>>
+    </div>
+    <div id="dropdown">
+        <select>
+           <option>Please select a location </option>
+           <option>Bangalore</option>
+           <option>Mumbai</option>
+        </select>
+        <select id="select-style">
+            <option>Select restaurants </option>
+            <option>Toscano</option>
+            <option>Ozaa</option>
+            <option>Spice Terrace</option>
+         </select>
+    </div>
     </div>
  
 
 
-    <div id="quicksearch"></div>
-    <div id="footer"></div>
-    
+    <div id="quicksearch">
+     <span id="quickHeading">Quick Search</span>
+     <span id="quickSubheading">Discover restaurants by type of meal</span>
+   <div class="mainTileContainer">
+    <div class="tileContainer">
+        <div class="tileComponent1">
+            <img src="image/1.png" alt="breakfast"/>
+        </div>
+    </div>
+   </div>
+    </div>
+
+
+
+    <div id="footer">
+        <h3>Copyright Developer 2022. All Rights Reserved</h3>
+        <div class="fotDiv">
+            <ul>
+                <li>Contact Us</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+        <div class="fotDiv">
+            <ul>
+                <li>Contact Us</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+        <div class="fotDiv noborder">
+            <ul>
+                <li>Contact Us</li>
+                <li>About Us</li>
+            </ul>
+        </div>
+    </div>
+  
 </body>
 </html>
