--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
        
         <div id="icon">
-            <h1>Zomato</h1>
+            <h1>Zomato Zomato</h1>
         </div>
         
         <div id="social">
