--- a/bootstrap/boot4.html
+++ b/bootstrap/boot4.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#devNav">
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar">Hello</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
