--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
        
         <div id="icon">
-            <h1>Zomato Zomato</h1>
+            <h1>Zomato App</h1>
         </div>
         
         <div id="social">
