--- a/bootstrap/flex.html
+++ b/bootstrap/flex.html
@@ -17,7 +17,7 @@
             flex-wrap: wrap;
             /* justify-content: flex-end; */
             /* align-items: baseline; */
-            align-content: space-between;
+            align-content: space-around;
             /* overflow: scroll; */
         }
         .flex-container > div {
@@ -43,12 +43,8 @@
      <div>9</div>
      <div>10</div>
      <div>11</div>
-     <div>12</div>
-     <div>13</div>
-     <div>14</div>
-     <div>15</div>
-     <div>16</div>
-     <div>17</div>
+     <div>12</div>    
+     
     </div>
 </body>
 </html>
