added math, theme

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="dom.js"></script>
+    <script src="math.js"></script>
 </body>
 </html>
