--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="object.js"></script>
+    <script src="hoisting.js"></script>
   </body>
 </html>
