updated geo and import export

--- a/javascript/exportimport/export.html
+++ b/javascript/exportimport/export.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="es6prototype.js"></script>
+    <script src="first.js"></script>
+    <script src="second.js"></script>
   </body>
 </html>
