closure, lexical scope

--- a/javascript/index.html
+++ b/javascript/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="es6prototype.js"></script>
+    <script src="advanceJavascpt.js"></script>
   </body>
 </html>
