added detail page menuList and tabs

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </ul>
       </div>
       <div class="fotDiv noborder">
-        <ul>
+        <ul class>
           <li>Contact Us</li>
           <li>About Us</li>
         </ul>
